--- a/dialogeditor/dialogeditorwindow.ui
+++ b/dialogeditor/dialogeditorwindow.ui
@@ -53,7 +53,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <widget class="QGraphicsView" name="constructorGraphicsView"/>
-     <widget class="QGraphicsView" name="dialogGraphicsView">
+     <widget class="ZoomableGraphicsView" name="dialogGraphicsView">
       <property name="mouseTracking">
        <bool>true</bool>
       </property>
@@ -98,6 +98,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ZoomableGraphicsView</class>
+   <extends>QGraphicsView</extends>
+   <header>dialogeditor/zoomablegraphicsview.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
