--- a/dialogeditor/phaseeditorwindow.ui
+++ b/dialogeditor/phaseeditorwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>332</width>
-    <height>71</height>
+    <width>400</width>
+    <height>100</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,16 +15,26 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="nameLineEdit"/>
+     </item>
+     <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Имя фазы:</string>
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="QLineEdit" name="lineEdit"/>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Кол-во баллов:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="scoreLineEdit"/>
      </item>
     </layout>
    </item>
@@ -40,7 +50,7 @@
      <item>
       <widget class="QLabel" name="errorTextLabel">
        <property name="text">
-        <string>Имя не может быть пустым</string>
+        <string/>
        </property>
       </widget>
      </item>
