Extended nodes editors Added ability to save dialog into memory

--- a/dialogeditor/expectedwordseditorwindow.ui
+++ b/dialogeditor/expectedwordseditorwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>563</width>
-    <height>318</height>
+    <width>583</width>
+    <height>465</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,6 +16,27 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QListWidget" name="listWidget"/>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="useHintCheckBox">
+     <property name="text">
+      <string>Задать подсказку</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QLabel" name="hintLabel">
+       <property name="text">
+        <string>Подсказка:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QTextEdit" name="hintTextEdit"/>
+     </item>
+    </layout>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
