--- a/dialogeditor/phaseeditorwindow.ui
+++ b/dialogeditor/phaseeditorwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>500</width>
-    <height>409</height>
+    <height>441</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -19,9 +19,33 @@
   <property name="windowTitle">
    <string>Редактор фазы</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_5">
+  <layout class="QVBoxLayout" name="verticalLayout_6">
    <item>
     <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Имя фазы:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="nameLineEdit">
+       <property name="clearButtonEnabled">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Кол-во баллов:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="scoreLineEdit"/>
+     </item>
      <item row="2" column="0" colspan="2">
       <widget class="Line" name="line">
        <property name="orientation">
@@ -39,101 +63,49 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="nameLineEdit">
-       <property name="clearButtonEnabled">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Имя фазы:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Кол-во баллов:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="scoreLineEdit"/>
-     </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_5">
-       <property name="text">
-        <string>Завершающая реплика:</string>
-       </property>
-      </widget>
+     <item row="3" column="1">
+      <layout class="QVBoxLayout" name="verticalLayout_4">
+       <item>
+        <widget class="QTextEdit" name="errorReplicaTextEdit">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>40</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="errorReplicaCheckBox">
+         <property name="text">
+          <string>Использовать для всех фаз</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item row="4" column="0">
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="label_8">
        <property name="text">
-        <string>Завершающие опорные слова:</string>
+        <string>Кол-во штрафных быллов:</string>
        </property>
       </widget>
-     </item>
-     <item row="6" column="0">
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string>Реплика возврата:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="0">
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="1">
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <widget class="QTextEdit" name="continuationExpectedWordsTextEdit">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>40</height>
-          </size>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="continuationExpectedWordsCheckBox">
-         <property name="text">
-          <string>Использовать для всех фаз</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item row="5" column="1">
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item>
-        <widget class="QTextEdit" name="finishingReplicaTextEdit">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>40</height>
-          </size>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="finishingReplicaCheckBox">
-         <property name="text">
-          <string>Использовать для всех фаз</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
      </item>
      <item row="4" column="1">
+      <layout class="QVBoxLayout" name="verticalLayout_5">
+       <item>
+        <widget class="QLineEdit" name="errorPenaltyLineEdit"/>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="errorPenaltyCheckBox">
+         <property name="text">
+          <string>Использовать для всех фаз</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="5" column="1" rowspan="2">
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
         <widget class="QTextEdit" name="finishingExpectedWordsTextEdit">
@@ -160,10 +132,17 @@
        </item>
       </layout>
      </item>
-     <item row="3" column="1">
-      <layout class="QVBoxLayout" name="verticalLayout_4">
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>Завершающая реплика:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QTextEdit" name="errorReplicaTextEdit">
+        <widget class="QTextEdit" name="finishingReplicaTextEdit">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -173,13 +152,48 @@
         </widget>
        </item>
        <item>
-        <widget class="QCheckBox" name="errorReplicaCheckBox">
+        <widget class="QCheckBox" name="finishingReplicaCheckBox">
          <property name="text">
           <string>Использовать для всех фаз</string>
          </property>
         </widget>
        </item>
       </layout>
+     </item>
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string>Реплика повтора фазы:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QTextEdit" name="repeatReplicaTextEdit">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>40</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="repeatReplicaCheckBox">
+         <property name="text">
+          <string>Использовать для всех фаз</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="5" column="0" rowspan="2">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Завершающие опорные слова:</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -225,6 +239,9 @@
     </layout>
    </item>
   </layout>
+  <zorder>errorPenaltyCheckBox</zorder>
+  <zorder>errorPenaltyLineEdit</zorder>
+  <zorder>buttonBox</zorder>
  </widget>
  <tabstops>
   <tabstop>nameLineEdit</tabstop>
@@ -235,8 +252,8 @@
   <tabstop>finishingExpectedWordsCheckBox</tabstop>
   <tabstop>finishingReplicaTextEdit</tabstop>
   <tabstop>finishingReplicaCheckBox</tabstop>
-  <tabstop>continuationExpectedWordsTextEdit</tabstop>
-  <tabstop>continuationExpectedWordsCheckBox</tabstop>
+  <tabstop>repeatReplicaTextEdit</tabstop>
+  <tabstop>repeatReplicaCheckBox</tabstop>
  </tabstops>
  <resources/>
  <connections>
