--- a/dialogeditor/phaseeditorwindow.ui
+++ b/dialogeditor/phaseeditorwindow.ui
@@ -66,7 +66,7 @@
      <item row="3" column="1">
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
-        <widget class="QTextEdit" name="errorReplicaTextEdit">
+        <widget class="QPlainTextEdit" name="errorReplicaPlainTextEdit">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -108,7 +108,7 @@
      <item row="5" column="1" rowspan="2">
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
-        <widget class="QTextEdit" name="finishingExpectedWordsTextEdit">
+        <widget class="QPlainTextEdit" name="finishingExpectedWordsPlainTextEdit">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -142,7 +142,7 @@
      <item row="7" column="1">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QTextEdit" name="finishingReplicaTextEdit">
+        <widget class="QPlainTextEdit" name="finishingReplicaPlainTextEdit">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -170,7 +170,7 @@
      <item row="8" column="1">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QTextEdit" name="repeatReplicaTextEdit">
+        <widget class="QPlainTextEdit" name="repeatReplicaPlainTextEdit">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -239,20 +239,17 @@
     </layout>
    </item>
   </layout>
-  <zorder>errorPenaltyCheckBox</zorder>
-  <zorder>errorPenaltyLineEdit</zorder>
-  <zorder>buttonBox</zorder>
  </widget>
  <tabstops>
   <tabstop>nameLineEdit</tabstop>
   <tabstop>scoreLineEdit</tabstop>
-  <tabstop>errorReplicaTextEdit</tabstop>
+  <tabstop>errorReplicaPlainTextEdit</tabstop>
   <tabstop>errorReplicaCheckBox</tabstop>
-  <tabstop>finishingExpectedWordsTextEdit</tabstop>
+  <tabstop>finishingExpectedWordsPlainTextEdit</tabstop>
   <tabstop>finishingExpectedWordsCheckBox</tabstop>
-  <tabstop>finishingReplicaTextEdit</tabstop>
+  <tabstop>finishingReplicaPlainTextEdit</tabstop>
   <tabstop>finishingReplicaCheckBox</tabstop>
-  <tabstop>repeatReplicaTextEdit</tabstop>
+  <tabstop>repeatReplicaPlainTextEdit</tabstop>
   <tabstop>repeatReplicaCheckBox</tabstop>
  </tabstops>
  <resources/>
