--- a/dialogeditor/expectedwordeditor.ui
+++ b/dialogeditor/expectedwordeditor.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>472</width>
-    <height>238</height>
+    <height>66</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -22,13 +22,6 @@
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0">
-      <widget class="QLabel" name="wordsLabel">
-       <property name="text">
-        <string>Опорные слова:</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="0">
       <widget class="QLabel" name="scoreLabel">
        <property name="text">
@@ -39,15 +32,15 @@
      <item row="1" column="1">
       <widget class="QLineEdit" name="scoreLineEdit"/>
      </item>
-     <item row="0" column="1">
-      <widget class="QPlainTextEdit" name="wordsPlainTextEdit">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
+     <item row="0" column="0">
+      <widget class="QLabel" name="wordsLabel">
+       <property name="text">
+        <string>Опорные слова:</string>
        </property>
       </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="wordsLineEdit"/>
      </item>
     </layout>
    </item>
