--- a/usereditor/usereditordialog.ui
+++ b/usereditor/usereditordialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>274</width>
-    <height>120</height>
+    <height>146</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,7 +25,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Имя пользователя</string>
+        <string>Имя пользователя:</string>
        </property>
       </widget>
      </item>
@@ -33,6 +33,16 @@
       <widget class="QLineEdit" name="usernameEdit"/>
      </item>
      <item row="1" column="0">
+      <widget class="QLabel" name="passwordLabel">
+       <property name="text">
+        <string>Пароль:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="passwordLineEdit"/>
+     </item>
+     <item row="2" column="0">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <widget class="QLabel" name="label">
@@ -62,7 +72,7 @@
        </item>
       </layout>
      </item>
-     <item row="1" column="1">
+     <item row="2" column="1">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QCheckBox" name="adminCheckBox">
